--- a/SpaceInvadersGame/Presentation/MainPage.xaml
+++ b/SpaceInvadersGame/Presentation/MainPage.xaml
@@ -4,14 +4,10 @@
       xmlns:local="using:SpaceInvadersGame"
       Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
   <ScrollViewer IsTabStop="True">
-    <Grid>
-      <StackPanel
-        HorizontalAlignment="Center"
-        VerticalAlignment="Center">
-        <TextBlock AutomationProperties.AutomationId="HelloTextBlock"
-          Text="Hello Uno Platform!"
-          HorizontalAlignment="Center" />
-      </StackPanel>
-    </Grid>
+      <Grid>
+          <Canvas x:Name="GameCanvas" Background="#008000">
+              <Rectangle Fill="#000"  Width="800" Height="150" Canvas.Left="0" Canvas.Top="0" Canvas.ZIndex="0" />
+          </Canvas>
+      </Grid>
   </ScrollViewer>
 </Page>
