FEAT: Added and applied personalized font family

--- a/SpaceInvadersGame/Presentation/MainPage.xaml
+++ b/SpaceInvadersGame/Presentation/MainPage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="SpaceInvadersGame.MainPage"
+<Page x:Class="SpaceInvadersGame.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:SpaceInvadersGame"
       xmlns:windows="clr-namespace:SkiaSharp.Views.Windows;assembly=SkiaSharp.Views.Windows"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+      FontFamily="{StaticResource GameFont}">
   <ScrollViewer IsTabStop="True">
       <Grid>
           <Grid.Background>
@@ -16,7 +17,7 @@
           </Grid.RowDefinitions>
 
           <StackPanel>
-              <TextBlock x:Name="Score" FontWeight="Bold" FontSize="20" Foreground="red"  Text="{Binding Score, UpdateSourceTrigger=PropertyChanged}" />
+              <TextBlock FontSize="30" Margin="40,20,0,0" x:Name="Score" FontWeight="Bold" Foreground="#007a8e"  Text="{Binding Score, UpdateSourceTrigger=PropertyChanged}" />
           </StackPanel>
 
           <Canvas x:Name="GameCanvas" Margin="50" Grid.Row="1"/>
