--- a/SpaceInvadersGame/App.xaml
+++ b/SpaceInvadersGame/App.xaml
@@ -4,7 +4,8 @@
 
   <Application.Resources>
     <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
+        <FontFamily x:Key="GameFont">ms-appx:///Assets/Fonts/space_invaders.ttf#Space Invaders Regular</FontFamily>
+        <ResourceDictionary.MergedDictionaries>
         <!-- Load WinUI resources -->
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
       </ResourceDictionary.MergedDictionaries>
