--- a/SpaceInvadersGame/Presentation/MainPage.xaml
+++ b/SpaceInvadersGame/Presentation/MainPage.xaml
@@ -22,14 +22,16 @@
               <RowDefinition/>
           </Grid.RowDefinitions>
 
-          <Grid ColumnSpacing="10">
+          <Grid ColumnSpacing="10" Background="#000">
               <Grid.ColumnDefinitions>
+                  <ColumnDefinition />
                   <ColumnDefinition />
                   <ColumnDefinition />
               </Grid.ColumnDefinitions>
 
               <TextBlock Grid.Column="0" FontSize="30" Margin="40,20,0,0" x:Name="Score" FontWeight="Bold" Foreground="#007a8e"  Text="{Binding Score, UpdateSourceTrigger=PropertyChanged}" />
               <TextBlock Grid.Column="1" FontSize="30" Margin="40,20,0,0" x:Name="Username" FontWeight="Bold" Foreground="#007a8e"  Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" />
+              <TextBlock Grid.Column="2" FontSize="30" Margin="40,20,0,0" x:Name="Wave" FontWeight="Bold" Foreground="#007a8e"  Text="{Binding Wave, UpdateSourceTrigger=PropertyChanged}" />
           </Grid>
 
           <Canvas x:Name="GameCanvas" Margin="50" Grid.Row="1">
