FEAT: New lifes count view

--- a/SpaceInvadersGame/Presentation/MainPage.xaml
+++ b/SpaceInvadersGame/Presentation/MainPage.xaml
@@ -22,7 +22,7 @@
               <RowDefinition/>
           </Grid.RowDefinitions>
 
-          <Grid ColumnSpacing="10" >
+          <Grid x:Name="HeaderGrid" ColumnSpacing="10" >
               <Grid.ColumnDefinitions>
                   <ColumnDefinition />
                   <ColumnDefinition />
